--- a/src/components/CardInfo/cardInfo.css
+++ b/src/components/CardInfo/cardInfo.css
@@ -1,6 +1,7 @@
 #cardInfo{
     display: flex;
     width: 100%;
+    height: 10vh;
     flex-direction: row;
     justify-content: flex-start;
     background-color: #4fd1d310;
