--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -33,6 +33,19 @@ p{
     font-size: x-small;
 }
 
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 12px;
+}
+
+li, a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
 .card{
     background-color: rgb(240, 240, 240);
     border-radius: 10px;
