--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -61,3 +61,9 @@ li, a {
     align-items: center;
 }
 
+@media (max-width: 940px) {
+    section div {
+        flex-direction: column;
+    }
+}
+
