--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,3 +13,10 @@ footer{
 footer img{
     width: 50vw;
 }
+
+@media (max-width: 940px) {
+    footer ul{
+        flex-direction: column;
+        align-items: center;
+    }
+}
