--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -13,3 +13,17 @@ top: 0;
 .logo {
     height: 100%;
 }
+
+.nav-menu{
+    display: none;
+    height: 100%;
+}
+
+@media (max-width: 940px) {
+    .nav-links {
+        display: none;
+    }
+    .nav-menu {
+        display: block;
+    }
+}
