--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -62,6 +62,11 @@ li, a {
     margin: 0;
 }
 
+.section div{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 @media (max-width: 940px) {
     .section{
         width: 90vw;
@@ -71,9 +76,8 @@ li, a {
         width: 90%;
     }
 
-    .section .card-container {
-        flex-direction: column;
-        flex-wrap: nowrap;
+    p{
+        font-size: small;
     }
 }
 
